# Operating-Systems-Assignments-

./: .gitignore  README.md
Examples/MessageQueues/: MessageQueues.c  MessageQueues2.c
Exercise/: base.c  second.c
Exercise2/: client.c  maxthreads.c  server.c
G1_F1/: CMakeLists.txt  Makefile  commandsActions.c  fileManager.c  fileManager.h  main.c  parsingInputs.c  types.h
Project/ProjectF1_1/: G1_F1.tar  fileManager.h  main.c  parsingInputs.c
ProjectF1_1/: Makefile.c  commandsActions.c  commandsActions.h  fileManager.c  fileManager.h  main.c  parsingInputs.c  parsingInputs.h
ProjectF1_1/ProjectF1_1/: Makefile  commandsActions.c  main.c
S0/: Makefile  driversManager.c  driversManager.h  fileManager.c  fileManager.h  main.c  stringmanipulation.c  stringmanipulation.h
S1/: Makefile  fileManager.c  fileManager.h  main.c  signalsManager.c  signalsManager.h  stringmanipulation.h
S2/: main.c
S3/: CMakeLists.txt  main.c  spaghetti.txt
S4/: S4_olvia.rey_javier.merida.c  Server_div  Server_mult
S5/: CMakeLists.txt  S4  Server_div.c  Server_mult.c  client.c  common.c  common.h  main.c  server.c
S6/: CMakeLists.txt  main.c
S7/: hamsters.c  semaphore.h
S8/: CMakeLists.txt  Makefile  library.h  receiver.c
S8/S8/: sender.c
SOA-CE1/: CMakeLists.txt  Makefile  main.cpp
